--- a/team.html
+++ b/team.html
@@ -7,8 +7,9 @@
     <title>Atlantic Forwarders</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/global.css" rel="stylesheet">
+	<link href="css/index.css" rel="stylesheet">
 	<link href="css/about.css" rel="stylesheet">
-	<link href="css/team.css" rel="stylesheet">
+	<link rel="stylesheet" href="./css/team.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap" rel="stylesheet">
 	<script src="js/jquery-2.1.1.min.js"></script>
@@ -26,7 +27,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html"><img src="/img/logo.jpg">Atlantic Forwarders</a>
+				<a class="navbar-brand" href="index.html"><img src="/img/logo.jpg"> Atlantic Forwarders</a>
 			</div>
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,6 +62,8 @@
 	</nav>
 	
 	</section>
+	
+</section>
 	
 <section id="center" class="center_o clearfix">
  <div class="container">
@@ -211,7 +214,6 @@ $(document).ready(function(){
 		
 });
 </script>
-
 </body>
  
 </html>
